Update membrane potentials

--- a/mem_potentials.html
+++ b/mem_potentials.html
@@ -4,24 +4,39 @@
             <title> Membrane Potential </title>
         </head>
         <body bgcolor="#D9E3F0">
-        <a href="index.html">PhysiologyMaps Home</a>
-        <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
-                <TR>
-                <TD WIDTH="800" HEIGHT="309">
-                <h2 align=center>Resting membrane potential (of a cell)</h2>
-                <p>The <b>resting membrane potential</b> of a cell is determined by the relative concentrations of charged ions inside the cell versus charged ions outside the cell at rest. The ions that play the biggest role in setting this resting membrane potential are potassium (K+), sodium (Na+), chloride (Cl-), and calcium (Ca2+).</p>
-                <p>The resting membrane potential of most cells is somewhere between -70mV and -80mV. This means that, at rest, there is relatively more negative charge inside of a cell than outside the cell. </p>
-                <p> ***. </p>
-            	<br>
-        </TD></TR></TABLE>
-       <BR>
+        <p><a href="index.html">PhysiologyMaps Home</a> > <a href="neurons.html">Neurons</a></p>
 
         <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
                 <TR>
                 <TD WIDTH="800" HEIGHT="309">
                 <a name="eq_potential"><h2 align=center>Equilibrium potential (of ions)</h2></a>
-                <p>The <b>equilibrium potential</b> of various ions help determine the resting membrane potential of a cell (and can help explain individual ion movements during action potentials).</p>
-                <p> ***. </p>
-                <center><img src="images/neuro/eq_potential_table.png" width="700" height="340"> </center></BR>
+                
+                <p> The <b>equilibrium potential</b> of an ion is defined as the <b>point at which there is no <i>net</i> movement of the ion into or out of a cell</b>. It occurs when the <i>concentration gradient</i> of the ion is in balance with the <i>electrical gradient</i> of the ion.</p>
+
+                    <p>Let's use potassium (K+) as an example. In most cells at rest, there are relatively more K+ inside of a cell than there is outside of the cell (the concentration of K+ is greater inside of a cell compared to outside). This determines K+'s concentration gradient: If K+ channels are opened, then the concentration gradient of K+ favors movement of K+ <i>out</i> of the cell, because it will try to equalize K+'s <i>concentration</i> across the cell membrane. However, as K+ leaves the cell, the inside of the cell becomes relatively more negative compared to before, because K+ is positively charged (losing a positively charged ion to the outside will make the inside of the cell less positive). As this happens, it creates an opposing electrical force for the movement of K+. This is K+'s electrical gradient: As the inside of the cell becomes more negative, the electrical gradient of K+ would favor movement of K+ <i>into</i> the cell, because it would try to equalize K+'s <i>electrical charge</i> across the cell membrane. So, at rest, these two forces (the concentration gradient and electrical gradient) oppose each other and constantly want to pull K+ in different directions. The equilibrium potential of K+ is the point at which K+'s tendency to move out of the cell (according to the concentration gradient) equals K+'s tendency to move into the cell (along its electrical gradient), such that the net of the opposing forces on K+ across the cell membrane is zero. This point occurs at approximately -90mV for K+ (this point will occur at different membrane potentials for other ions). This means that K+ will always move out of cell along its concentration gradient until the <a href="#resting_mem_potential">membrane potential of the cell</a> reaches -90mV. Once the cell's membrane potential reaches -90mV, there is too much positive charge outside the cell relative to inside the cell, which will stop the flow of K+ (a positive ion) out of the cell, because at that point, the electrical gradient will oppose K+'s movement out to that more positive environment. </p>
+
+                    <p>The equilibrium potentials for some common ions include:</p>
+
+                    <ul><li>Sodium (Na+): +65mV (Na+ will flow into a cell until the cell's membrane potential is +65mV)</li>
+                        <li>Potassium (K+): -90mV (K+ will flow out of a cell until the cell's membrane potential is -90mV)</li>
+                        <li>Calcium (Ca2+): +125mV (Ca2+ will flow into a cell until the cell's membrane potential is +125mV)</li>
+                        <li>Chloride (Cl-): -75mV (Cl- will flow into a cell until the cell's membrane potential is +125mV)</li></ul>
+
+                    <p>The equilibrium potential of various ions across a cell's membrane help determine the <b>resting membrane potential</b> of that cell (and can help explain individual ion movements during action potentials, like <a href="neurons.html#actionpotentials">neuronal action potentials</a> and <a href="cardiac_myocytes.html#nodal_cells">cardiac myocyte action potentials</a>). A summary chart of the equilibrium potential of various ions and how they will move into/out of cell's under physiologic conditions can be found below. </p>
+                
+        </TD></TR></TABLE>
+       <BR>
+               <TABLE WIDTH="800" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
+                <TR>
+                <TD WIDTH="800" HEIGHT="309">
+                <a name="resting_mem_potential"><h2 align=center>Resting membrane potential (of a cell)</h2></a>
+                <p>The <b>resting membrane potential</b> of a cell is the charge difference that exists across a cell's membrane at rest, or when the cell isn't being excited or expoeriencing an action potential. A cell's resting membrane potential is determined by the relative concentrations of charged ions inside the cell vs. charged ions outside the cell. The resting membrane potential of most cells is somewhere between -70mV and -80mV. This means that, at rest, there is relatively more negative charge inside of a cell than outside the cell (the convention is that we are always talking about the inside of a cell relative to the outside).</p>
+
+                    <p>The <b>ions that play the biggest role in setting this resting membrane potential</b> are potassium (<b>K+</b>), sodium (<b>Na+</b>), chloride (<b>Cl-</b>), and calcium (<b>Ca2+</b>). At rest and under normal physioogic conditions, there is more K+ inside the cell than outside the cell. Conversely, at rest, there is more Na+, Ca2+, and Cl- outside the cell compared to inside. When we take into account all of these ions, their individual <a href="#eq_potential">equilibrium potentials</a>, and their permeabilities across the cell's membrane, the net/final resting potential of a cell ends up being somewhere between -70mV and -80mV, as mentioned above. Under resting conditions, the cell is most permeable to K+ and Cl-, which means that K+ and Cl- are more likely to move across the cell membrane according to their equailibrium potentials (K+ has a tendency to move <i>out</i> of the cell, trying to get the cell closer to K+'s own equilibrium potential of -90mV; Cl- normally moves <i>into</i> the cell, trying to get the cell closer to Cl-'s own membrane potential of -75mV). Because these two ions have the highest permeability across the cell membrane, they have the most influence on where the cell's resting membrane potential eventually lands. This is why a normal cell's resting membrane potential of -70 to -80mV is closer to K+'s and Cl-'s equilibrium potentials (than, say, Na+'s equilibrium potential of +65mV or Ca2+'s equilibrium potential of +125mV--the cell membrane is relatively impermeable to Na+ and Ca2+ at rest, so these ions can't move as freely across the cell membrane in an attempt to get the cell closer to <i>their</i> equilibrium potentials). </p>
+
+                <p> The table below summarizes the four major ions that determine the resting membrane potential of cells, their equilibrium potentials, and what will happen to the flow of these ions when their relative ion channels are opened. </p>
+                <center><img src="images/neuro/eq_potential_table.png" width="770" height="370"> </center></BR>
+
+                <p>These movements become important when considering what happens during action potentials--which are essentially just large movements of ions across cell membranes that function to propagate signals (like in <a href="neurons.html#actionpotentials">neuronal action potentials</a>, <a href="cardiac_myocytes.html#nodal_cells">cardiac nodal cell action potentials</a>, or <a href="cardiac_myocytes.html#av_myocytes">cardiac myocyte action potentials</a>) or cause physiologic changes in cells (like in <a href="cardiac_myocytes.html#myocytes_contract">cardiac myocyte excitation-contraction coupling</a> or in skeletal muscle contraction). </p>
         </TD></TR></TABLE>
        <BR>
