Add google analytics

--- a/cardiac_cycle.html
+++ b/cardiac_cycle.html
@@ -2,7 +2,18 @@
         <html>
         <head>
             <title> The Cardiac Cycle </title>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-649RVX3ME8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-649RVX3ME8');
+</script>
         </head>
+
+        
         <body bgcolor="#D9E3F0">
             <p><a align="left" href="index.html">PhysiologyMaps Home</a> > <a align="right" href="cardio.html">Cardiovascular main map</a></p>
 
