--- a/cardio.html
+++ b/cardio.html
@@ -2,7 +2,18 @@
         <html>
         <head>
             <title> Cardiovascular System Home Page </title>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-649RVX3ME8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-649RVX3ME8');
+</script>
         </head>
+
+        
         <body bgcolor="#99B3E1">
             <a href="index.html">PhysiologyMaps Home</a>
         	<h1>Cardiovascular system</h1>
