--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
         <html>
         <head>
             <title> Physiology Maps Home Page </title>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-649RVX3ME8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-649RVX3ME8');
+</script>
         </head>
+
+        
         <body bgcolor="#98B8F0">
         	<h1>Physiology Maps</h1>
             <TABLE WIDTH="580" HEIGHT="370" BORDER="1" CELLSPACING="2" CELLPADDING="2">
